Prevent negative arc weights and delays and add tests